package cass.utils;

option cc_generic_services = true;
option java_generic_services = true;
option py_generic_services = true;
option java_generate_equals_and_hash = true;

option java_package = "com.kongtrolink.framework.core.protobuf";
option java_outer_classname = "RpcNotifyProto";

enum MessageType { //消息类型
  REQUEST = 0; //请求
  RESPONSE = 1; //响应
  ERROR = 2; // 错误
}

enum ErrorCode {
  NO_ERROR = 0; //无错误
  WRONG_PROTO = 1; //错误的proto文件
  NO_SERVICE = 2; //未知service
  NO_METHOD = 3; // 未知方法
  INVALID_REQUEST = 4; //无效的请求
  INVALID_RESPONSE = 5; //无效的响应
  TIMEOUT = 6; //超时请求
}

message RpcMessage {
  required MessageType type = 1; //消息类型
  optional string msgId = 2; //通信的全局唯一标识

  optional string service = 3; //请求执行服务
  optional string method = 4; //请求执行执行方法

  optional string payload = 5; //请求报文

  optional ErrorCode error = 6; //错误信息
}

// the meta service
service RpcNotify {
  rpc notify(RpcMessage) returns (RpcMessage);
}
